--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,12 +8,12 @@ plugins {
 android {
     compileSdkVersion 28
     defaultConfig {
-        applicationId "com.karumi"
+        applicationId "com.octawizard"
         minSdkVersion 16
         targetSdkVersion 28
         versionCode 1
         versionName "1.0"
-        testInstrumentationRunner "com.karumi.TestRunner"
+        testInstrumentationRunner "com.octawizard.TestRunner"
     }
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
